--- a/frontend-react-namx/package.json
+++ b/frontend-react-namx/package.json
@@ -9,7 +9,8 @@
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.0-rc.1",
-    "@mui/material": "^5.0.0-rc.1",
+    "@mui/material": "^5.11.0",
+    "@mui/styles": "^5.11.0",
     "@react-spring/three": "^9.2.4",
     "@react-spring/web": "^9.2.4",
     "@react-three/drei": "^7.5.0",
@@ -26,6 +27,7 @@
     "clsx": "^1.1.1",
     "glslify-loader": "^2.0.0",
     "gray-matter": "^4.0.3",
+    "hero-slider": "^3.1.0",
     "leva": "^0.9.13",
     "next": "11.1.0",
     "raw-loader": "^4.0.2",
