--- a/frontend-react-namx/package.json
+++ b/frontend-react-namx/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "frontend-react-namx",
+  "name": "namx-app",
   "version": "0.1.0",
-  "proxy": "http://localhost:5000/",
   "private": true,
   "dependencies": {
     "@emotion/cache": "^11.4.0",
     "@emotion/react": "^11.4.1",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.0.0-rc.1",
     "@mui/material": "^5.11.0",
     "@mui/styles": "^5.11.0",
@@ -16,26 +18,24 @@
     "@react-three/drei": "^7.5.0",
     "@react-three/fiber": "^7.0.6",
     "@react-three/postprocessing": "^2.0.5",
-    "@fortawesome/fontawesome-svg-core": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.3",
+    "@types/node": "^16.18.10",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
     "@types/react-router-dom": "^5.3.3",
     "@types/three": "^0.131.0",
+    "axios": "^1.2.1",
     "clsx": "^1.1.1",
     "glslify-loader": "^2.0.0",
     "gray-matter": "^4.0.3",
     "hero-slider": "^3.1.0",
     "leva": "^0.9.13",
-    "next": "11.1.0",
+    "next": "^13.0.7",
     "raw-loader": "^4.0.2",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.9",
-    "axios": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
@@ -44,8 +44,8 @@
     "remark": "^14.0.1",
     "remark-html": "^14.0.1",
     "three": "^0.132.2",
-    "utility-types": "^3.10.0",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.9.4",
+    "utility-types": "^3.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -72,8 +72,9 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "typescript": "^4.9.3"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4",
+    "web-vitals": "^2.1.4"
   }
 }
