--- a/frontend-react-namx/package.json
+++ b/frontend-react-namx/package.json
@@ -15,8 +15,8 @@
     "@mui/styles": "^5.11.0",
     "@react-spring/three": "^9.2.4",
     "@react-spring/web": "^9.2.4",
-    "@react-three/drei": "^7.5.0",
-    "@react-three/fiber": "^7.0.6",
+    "@react-three/drei": "^7.27.5",
+    "@react-three/fiber": "^7.0.29",
     "@react-three/postprocessing": "^2.0.5",
     "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.5",
@@ -27,7 +27,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/react-router-dom": "^5.3.3",
-    "@types/three": "^0.131.0",
+    "@types/three": "^0.131.1",
     "axios": "^1.2.1",
     "clsx": "^1.1.1",
     "glslify-loader": "^2.0.0",
@@ -44,6 +44,8 @@
     "remark": "^14.0.1",
     "remark-html": "^14.0.1",
     "three": "^0.132.2",
+    "three-css3drenderer": "^1.0.1",
+    "tree": "^0.1.3",
     "typescript": "^4.9.4",
     "utility-types": "^3.10.0"
   },
